--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,17 @@
 name: CI
-on: 
-  push
+on: [push]
 jobs:
   build:
-  name: Automate Testing
   runs-on: ubuntu-latest
   services: 
-      postgres:
-        image: postgres:11.6-alpine
-        env:
-          POSTGRES_PASSWORD: 121212
-          POSTGRES_USERNAME: jaydip 
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    postgres:
+      image: postgres:11.6-alpine
+      env:
+        POSTGRES_PASSWORD: 121212
+        POSTGRES_USERNAME: jaydip 
+      ports:
+        - 5432:5432
+      options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
   steps:
     - uses: actions/checkout@v2
